--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,13 @@
+
+spring:
+  r2dbc:
+    url: r2dbc:postgresql://localhost:5432/postgres?schema=anime
+    username: root
+    password: root
+
 logging:
   level:
     org:
       springframework:
         data:
-          r2dbc: INFO
+          r2dbc: DEBUG
